# nextjs-agentcore-webapp

./: .gitignore  README.md
.github/workflows/: deploy.yml  setup-amplify-app.yml
agentcore/: main.py  pyproject.toml
nextapp/: package-lock.json  package.json  vercel.json
nextapp/src/app/: layout.tsx  page.tsx
nextapp/src/app/api/agent-stream/: route.ts
nextapp/src/components/: AuthProvider.tsx  ChatComponent.tsx  Header.tsx
nextapp/src/lib/: auth-utils.ts  error-utils.ts
